Fruits section small fixes
id for fruits section added (id="section-fruits"). Type of display paragraph text for tablet and desk fixed.

--- a/src/css/fruits.css
+++ b/src/css/fruits.css
@@ -1,3 +1,11 @@
+/* #region Title*/
+@media only screen and (min-width: 1280px) {
+  .par {
+    max-width: 509px;
+  }
+}
+/* #endregion*/
+
 /* #region Fruit card*/
 .fruits-list {
   display: flex;
